# demo-horizon

./: setup.cfg
caas_ui/content/clusters/: panel.py  urls.py  views.py
caas_ui/content/clusters/templates/clusters/: index.html
caas_ui/enabled/: _001_caas_group.py  _002_caas_panel.py
caas_ui/static/dashboard/project/caas_ui/clusters/templates/: index.html
