[metadata]
name = caas_ui
summary = A panel caas for OpenStack Dashboard
description-file =
    README.rst
author = myname
author_email = sapd@vccloud.vn
home-page = https://vccloud.vn
classifiers = [
    Environment :: OpenStack
    Framework :: Django
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3.5

[files]
packages =
    caas_ui